--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Github action test",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d public"
   },
   "repository": {
     "type": "git",
