--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,4 @@
+
 name: brandsite deploy
 
 on:
@@ -34,10 +35,14 @@ jobs:
         with:
           ref: "gh-pages"
           clean: false
+      - name: Copy Directories
+        run: |
+          rm -rf ./build
+          cp -r ./public ./build
       - name: Add & Commit
         uses: EndBug/add-and-commit@v4.4.0
         with:
-          add: '.'
+          add: 'build'
           ref: "gh-pages"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
