--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,8 @@ jobs:
           clean: false
       - name: Copy Directories
         run: |
-          rm -rf ./build
-          cp -r ./public ./build
+          rm -rf ./docs
+          cp -r ./public ./docs
       - name: Add & Commit
         uses: EndBug/add-and-commit@v4.4.0
         with:
