--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Add & Commit
         uses: EndBug/add-and-commit@v4.4.0
         with:
-          add: 'build'
+          add: 'docs'
           ref: "gh-pages"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
