--- a/.github/configs.yml
+++ b/.github/configs.yml
@@ -8,6 +8,7 @@ addAssignees: false
 reviewers:
   - lja1018
   - lje1018
+  - whowhowho
 
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
