--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: "main"
-      - name: echo ref
-        run: |
-          echo ${{ github.ref }}
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
