--- a/.github/workflows/add-pr-owner.yml
+++ b/.github/workflows/add-pr-owner.yml
@@ -1,8 +1,8 @@
 name: Add PR Owner
 
 on:
-  pull_request_review:
-    types: [ opened ]
+  pull_request:
+    types: [opened, ready_for_review]
 
 jobs:
   add-pr-owner:
