--- a/.github/workflows/add-pr-owner.yml
+++ b/.github/workflows/add-pr-owner.yml
@@ -1,13 +1,13 @@
-name: Add PR Owner
+# name: Add PR Owner
 
-on:
-  pull_request:
-    types: [opened, ready_for_review]
+# on:
+#   pull_request:
+#     types: [opened, ready_for_review]
 
-jobs:
-  add-pr-owner:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: a-b-r-o-w-n/add-pr-owner-action@v1
-        with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+# jobs:
+#   add-pr-owner:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: a-b-r-o-w-n/add-pr-owner-action@v1
+#         with:
+#           repo-token: "${{ secrets.GITHUB_TOKEN }}"
